welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:11: error: ';' expected but 'else' found.
  } else {
    ^SnakeBuggle:17: error: Unmatched closing brace '}' ignored here
}
^